k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    name: backend
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    name: frontend
    environment: production
